--- a/MovieCollection/appsettings.json
+++ b/MovieCollection/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "data source=localhost,1433;initial catalog=MovieCollection;User Id=sa;Password=reallyStrongPwd123;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework;"
+    "DefaultConnection": "data source=127.0.0.1,1433;initial catalog=MovieCollection;User Id=sa;Password=reallyStrongPwd123;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework;"
   },
   "Logging": {
     "LogLevel": {
